# Nagyhazi

./: CMakeLists.txt  Félkész HF.docx  ProgHF_programozoi_dokumentacio.docx  Specifikáció.docx  asztalfoglalas.c  asztalfoglalas.h  asztalok_megadasa.c  asztalok_megadasa.h  beallitas_mod.c  beallitas_mod.h  felhasznalo_mod.c  felhasznalo_mod.h  felhasznaloi_dokumentacio.docx  main.c  menu_megadasa.c  menu_megadasa.h  rendeles_megadasa.c  rendeles_megadasa.h  specifikacio.docx  strukturak.h  szamla_kiallitasa.c  szamla_kiallitasa.h
